# TclTLS

./: Makefile.in  README.txt  acinclude.m4  aclocal.m4  configure  configure.ac  pkgIndex.tcl  pkgIndex.tcl.in  tclOpts.h  tls.c  tls.h  tls.htm  tls.tcl  tlsBIO.c  tlsIO.c  tlsInt.h  tlsX509.c
.fossil-settings/: ignore-glob
demos/: README.txt  gets_blocking_no_variable.tcl  gets_blocking_with_variable.tcl  gets_nonblocking_no_variable.tcl  gets_nonblocking_with_variable.tcl  gets_with_debug_data.tcl  http_debug_example.tcl  http_get_file.tcl  http_get_webpage.tcl  http_get_webpage_proxy.tcl  read_blocking_webpage.tcl  read_nonblocking_webpage.tcl
doc/: tls.html  tls.man  tls.n
generic/: gen_dh_params  tclOpts.h  tls.c  tls.h  tlsBIO.c  tlsIO.c  tlsInt.h  tlsX509.c
tests/: README.txt  all.tcl  badssl.csv  badssl.test  ciphers.csv  ciphers.test  common.tcl  keytest1.tcl  keytest2.tcl  make_test_files.tcl  remote.tcl  simpleClient.tcl  simpleServer.tcl  tlsIO.test
tests/oldTests/: tlsSrv.tcl  tlsSrv2.tcl
win/: README.txt  makefile.vc  rules.vc
